--- a/papabirthday.html
+++ b/papabirthday.html
@@ -4,9 +4,13 @@
 <center>
 <h1>HAPPY BIRTHDAY PAPA !!  </h1></center>
 <br>
-    <h2>Happy birthday dear dad , You are the best dad in the world . Me and Hanu are blessed that we have you . I wish that your this 
-        day will be filled with happiness and joy . I hope  that I will be able to entertain and make you happy with the today's programme .
-         !! <br> <h1> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  So, Before beggining I would like to tell you that today we are going to - </h1>
+    <h2>Happy birthday dear dad , <br>
+       You are the best dad in the world . <br>
+        Me and Hanu are blessed that we have you . <br>
+        I wish that your this day will be filled with happiness and joy . <br>
+        I hope  that I will be able to entertain and make you happy with the today's programme . <br>
+         !! <br> <h1> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  
+        So, Before beggining I would like to tell you that today we are going to - </h1>
     
 <br>
 <body bgcolor='yellow'>
